log
Thu, May 15, 2025 10:35:44 AM: 
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
Thu, May 15, 2025 10:36:09 AM: 
 tests:  0|5
total_score: 0/70
8e7e548
Thu, May 15, 2025 10:36:42 AM: 
 sudoku.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
 tests:  2|4
total_score: 15/70
e6d7d86
Thu, May 15, 2025 10:40:30 AM: 
 sudoku.c | 21 ++++++++++-----------
 1 file changed, 10 insertions(+), 11 deletions(-)
 tests:  2|4
total_score: 15/70
f636cc6
Thu, May 15, 2025 11:10:11 AM: 
 sudoku.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  0|5
total_score: 0/70
e5edf10
Thu, May 15, 2025 11:18:42 AM: 
 sudoku.c | 12 ++++--------
 1 file changed, 4 insertions(+), 8 deletions(-)
 tests:  5|3
total_score: 35/70
1637de3
Thu, May 15, 2025 11:20:48 AM: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|5
total_score: 0/70
ee69d9e
Thu, May 15, 2025 11:22:51 AM: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  5|3
total_score: 35/70
47e44f3
Thu, May 15, 2025 11:32:42 AM: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  0|0
6d8bf6b
Thu, May 15, 2025 11:50:08 AM: 
 sudoku.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
536fcf4
Thu, May 15, 2025 11:55:43 AM: 
 sudoku.c | 13 ++++---------
 1 file changed, 4 insertions(+), 9 deletions(-)
 tests:  5|3
total_score: 35/70
824752e
Thu, May 15, 2025 12:09:52 PM: 
 sudoku.c | 22 ++++++++++++++++++----
 1 file changed, 18 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
e6bc1b1
Thu, May 15, 2025 12:10:40 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
0d4fde2
Thu, May 15, 2025 12:12:19 PM: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
f789986
Thu, May 15, 2025 12:13:07 PM: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
8fbf369
Thu, May 15, 2025 12:17:53 PM: 
 sudoku.c | 18 ++++++++++++------
 1 file changed, 12 insertions(+), 6 deletions(-)
 tests:  0|0
4df4c47
Thu, May 15, 2025 12:18:37 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
91a2952
Thu, May 15, 2025 12:18:51 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
8b7c537
Thu, May 15, 2025 12:22:15 PM: 
 sudoku.c | 22 ++--------------------
 1 file changed, 2 insertions(+), 20 deletions(-)
 tests:  6|2
total_score: 45/70
2a1d331
Thu, May 15, 2025 12:24:54 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
aead6bb
